# aircraft-data-hierarchy

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/aircraft_data_hierarchy/: __init__.py  behavior.py  common_base_model.py  performance.py  requirements.py
src/aircraft_data_hierarchy/work_breakdown_structure/: __init__.py  equipment.py  work_breakdown_structure.py
src/aircraft_data_hierarchy/work_breakdown_structure/airframe/: __init__.py  airframe.py  airframe_geometry.py  airframe_parameters.py
src/aircraft_data_hierarchy/work_breakdown_structure/propulsion/: __init__.py  propulsion.py  propulsion_cycle.py  propulsion_geometry.py
src/aircraft_data_hierarchy/work_breakdown_structure/systems/: __init__.py  systems.py  systems_diagrams.py  systems_parameters.py
tests/: test_imports.py
tests/test_aircraft_data_hierarchy/: test_common_base_model.py  test_performance.py  test_requirements.py
tests/test_aircraft_data_hierarchy/test_work_breakdown_structure/: test_work_breakdown_structure.py
tests/test_aircraft_data_hierarchy/test_work_breakdown_structure/test_airframe/: test_airframe.py  test_airframe_geometry.py  test_airframe_parameters.py
